updates to hatchery release and survival notebooks

--- a/notebooks/Chinook - age 2 plus abundance biomass (Py3).ipynb
+++ b/notebooks/Chinook - age 2 plus abundance biomass (Py3).ipynb
@@ -2886,11 +2886,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\series.py:853: RuntimeWarning: invalid value encountered in log\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "# summarize catch, escapement, and estimate of stock biomass at beginning of year\n",
     "outpath = \"C://Users//Greig//Sync//6. SSMSP Model//Model Greig//Data//1. Salmon/\"\n",
@@ -2963,7 +2972,7 @@
     "CatchAbun_df3 = CatchAbun_df2.groupby(['Year']).sum().reset_index()\n",
     "\n",
     "final_df = pd.merge(df6,CatchAbun_df3, on=['Year'])\n",
-    "final_df[\"Chin_F_PSC\"] = (np.abs(np.log((final_df[\"Chin_catch_B_mt_in_PSC\"] + final_df[\"Chin_catch_B_mt_out_PSC\"]) / final_df[\"Chinook_B_mt_Total_PSC\"]))).round(2)\n",
+    "final_df[\"Chin_F_PSC\"] = (np.abs(np.log(1-(final_df[\"Chin_catch_B_mt_in_PSC\"] + final_df[\"Chin_catch_B_mt_out_PSC\"]) / final_df[\"Chinook_B_mt_Total_PSC\"]))).round(2)\n",
     "final_df[\"Chin_Bdens_total_PSC\"] = (final_df[\"Chinook_B_mt_Total_PSC\"] / study_area).round(2)\n",
     "final_df.to_csv (outpath + r'TS_Chinook_PSC_1979to2018.csv', index = True, header=True)"
    ]
