updates to ecological data prep

--- a/notebooks/KillerWhale - TKW Biomass Time Series (R).ipynb
+++ b/notebooks/KillerWhale - TKW Biomass Time Series (R).ipynb
@@ -127,7 +127,6 @@
     "abun$consump_mt_yr_mid=0\n",
     "abun$consump_mt_yr_max=0\n",
     "\n",
-    "\n",
     "annual_avg_indiv_mass <- data.frame(year=abun['abun_min'][1,], avg_TKW_indiv_B_1_min=0, avg_TKW_indiv_B_2_min=0,\n",
     "                                    avg_TKW_indiv_B_1_mid=0, avg_TKW_indiv_B_2_mid=0,\n",
     "                                    avg_TKW_indiv_B_1_max=0, avg_TKW_indiv_B_2_max=0\n",
@@ -224,7 +223,7 @@
     "                   \n",
     "}\n",
     "\n",
-    "# to do: sigmoid function growing prop pop and prop time foraging\n",
+    "# sigmoid function growing prop pop and prop time foraging\n",
     "abun_expanded <- data.frame(abun)\n",
     "\n",
     "# fill in subsequent years\n",
