some hatchery data modfications

--- a/notebooks/Salmon hatchery releases - 4 EWE TS (Py3).ipynb
+++ b/notebooks/Salmon hatchery releases - 4 EWE TS (Py3).ipynb
@@ -6,10 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# last edited Jul 8, 2021 by GO\n",
-    "# - modified to add option to aggregate to year instead of month \n",
-    "# - note that Ecosim requires monthly / seasonal values\n",
-    "# - to do: insert repeated rows of mean annual biomass on monthly timestep"
+    "# last edited Jul 8, 2021 by GO"
    ]
   },
   {
@@ -822,7 +819,9 @@
     "# write to temp file\n",
     "releasesEcosim_wide.to_csv(localpath_in + '/MODIFIED/temp.csv', index=True)\n",
     "\n",
+    "# ===================================\n",
     "# open temp file and insert header\n",
+    "# ===================================\n",
     "\n",
     "#Title\tCombined_GST_FR_Escape_RelB_NuSEDS\tChin_Hatch_RelB_CW\tChin_1stYrM_1_CW\tChin_1stYrM_2_CW\tChin_C_Rel_CW\n",
     "#Weight\t1\t1\t1\t1\t1\n",
@@ -904,130 +903,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>YEAR</th>\n",
-       "      <th>Chinook</th>\n",
-       "      <th>Coho</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>1950</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>1951</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>1952</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>1953</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>1954</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>65</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>0.001017</td>\n",
-       "      <td>0.000875</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>66</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>0.000526</td>\n",
-       "      <td>0.000224</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>67</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>68</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>69</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>70 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    YEAR   Chinook      Coho\n",
-       "0   1950  0.000000  0.000000\n",
-       "1   1951  0.000000  0.000000\n",
-       "2   1952  0.000000  0.000000\n",
-       "3   1953  0.000000  0.000000\n",
-       "4   1954  0.000000  0.000000\n",
-       "..   ...       ...       ...\n",
-       "65  2015  0.001017  0.000875\n",
-       "66  2016  0.000526  0.000224\n",
-       "67  2017  0.000000  0.000000\n",
-       "68  2018  0.000000  0.000000\n",
-       "69  2019  0.000000  0.000000\n",
-       "\n",
-       "[70 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(releasesEcosim_wide.to_records())"
+   ]
   },
   {
    "cell_type": "code",
@@ -1166,9 +1047,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "pd.DataFrame(releasesEcosim_wide.to_records())"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1178,11 +1057,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Just junk below"
+   ]
   },
   {
    "cell_type": "code",
