--- a/notebooks/Data Prep - Salmon hatchery releases (Can.)  - 1 coords (Py3).ipynb
+++ b/notebooks/Data Prep - Salmon hatchery releases (Can.)  - 1 coords (Py3).ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# last edited Jan 12 2021\n",
+    "# last edited Apr 2021\n",
     "# accidentally deleted changes - new input / output paths etc.\n",
     "# still need to redo these changes"
    ]
@@ -18,6 +18,9 @@
     "### Join EPAD data to lat / lon data for hatchery releases\n",
     "March 2020\n",
     "By: G Oldford\n",
+    "\n",
+    "Modified Apr 2022 \n",
+    "Note the EPAD data does not include Puget Sound releases\n",
     "\n",
     "Data In: \n",
     "1. EPAD data from Carl (DFO / SEP) - has no coordinates - 'actual_releases.csv'\n",
