puget sound hatchery data processing

--- a/notebooks/Data Prep - Salmon hatchery releases - 2 vis (py 3).ipynb
+++ b/notebooks/Data Prep - Salmon hatchery releases - 2 vis (py 3).ipynb
@@ -210,7 +210,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -448,6 +450,13 @@
     ")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
