some minor edits

--- a/notebooks/Model - KillerWhale - TKW Biomass Time Series (R).ipynb
+++ b/notebooks/Model - KillerWhale - TKW Biomass Time Series (R).ipynb
@@ -17,7 +17,8 @@
     }
    ],
    "source": [
-    "# last updated Feb 26 2022 by GO\n"
+    "# last updated Feb 26 2022 by GO\n",
+    "# note this calculates q/b but needs a little more to complete that. "
    ]
   },
   {
