--- a/notebooks/Data Prep - Salmon survival Chinook - 1 time series prep (R).ipynb
+++ b/notebooks/Data Prep - Salmon survival Chinook - 1 time series prep (R).ipynb
@@ -7,7 +7,7 @@
     "### Prep Chinook survival data for ecosystem model\n",
     " - Purpose: Prep survival data for model\n",
     " - By: G Oldford <br>\n",
-    " - Date: 2019-2021 <br>\n",
+    " - Date: 2019-2023 <br>\n",
     "#### Data in:\n",
     "   **1) Ruff et al 2017 / 2020 survival data**\n",
     "         - survival_joined_stocks.csv (edited manually to add functional group codes for EWE)\n",
@@ -25,15 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Warning message:\n",
-      "\"package 'dplyr' was built under R version 3.6.3\"\n",
+      "\n",
       "Attaching package: 'dplyr'\n",
       "\n",
       "The following objects are masked from 'package:stats':\n",
@@ -44,33 +43,31 @@
       "\n",
       "    intersect, setdiff, setequal, union\n",
       "\n",
-      "Warning message:\n",
-      "\"package 'tidyverse' was built under R version 3.6.3\"-- \u001b[1mAttaching packages\u001b[22m --------------------------------------- tidyverse 1.3.0 --\n",
-      "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.2.1     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 2.1.3     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.4.0\n",
-      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \n",
-      "Warning message:\n",
-      "\"package 'tidyr' was built under R version 3.6.3\"Warning message:\n",
-      "\"package 'purrr' was built under R version 3.6.3\"-- \u001b[1mConflicts\u001b[22m ------------------------------------------ tidyverse_conflicts() --\n",
-      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "Warning message:\n",
-      "\"package 'plotly' was built under R version 3.6.2\"\n",
-      "Attaching package: 'plotly'\n",
-      "\n",
-      "The following object is masked from 'package:ggplot2':\n",
-      "\n",
-      "    last_plot\n",
-      "\n",
-      "The following object is masked from 'package:stats':\n",
-      "\n",
-      "    filter\n",
-      "\n",
-      "The following object is masked from 'package:graphics':\n",
-      "\n",
-      "    layout\n",
-      "\n"
+      "Registered S3 methods overwritten by 'ggplot2':\n",
+      "  method         from \n",
+      "  [.quosures     rlang\n",
+      "  c.quosures     rlang\n",
+      "  print.quosures rlang\n",
+      "Registered S3 method overwritten by 'rvest':\n",
+      "  method            from\n",
+      "  read_xml.response xml2\n",
+      "-- Attaching packages --------------------------------------- tidyverse 1.2.1 --\n",
+      "v ggplot2 3.1.1     v readr   1.3.1\n",
+      "v tibble  2.1.1     v purrr   0.3.2\n",
+      "v tidyr   0.8.3     v stringr 1.4.0\n",
+      "v ggplot2 3.1.1     v forcats 0.4.0\n",
+      "-- Conflicts ------------------------------------------ tidyverse_conflicts() --\n",
+      "x dplyr::filter() masks stats::filter()\n",
+      "x dplyr::lag()    masks stats::lag()\n"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in library(plotly): there is no package called 'plotly'\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in library(plotly): there is no package called 'plotly'\nTraceback:\n",
+      "1. library(plotly)"
      ]
     }
    ],
@@ -91,9 +88,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in file(file, \"rt\"):\n",
+      "\"cannot open file 'C:\\Users\\Greig\\Sync\\6. SSMSP Model\\Model Greig\\Data\\1. Salmon\\Survival Exploitation Rate\\ChinookSurvival_Ruffetal2017\\MODIFIED\\survival_joined_stocks.csv': No such file or directory\""
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in file(file, \"rt\"): cannot open the connection\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in file(file, \"rt\"): cannot open the connection\nTraceback:\n",
+      "1. read.csv(paste(localpath_ruff, \"survival_joined_stocks.csv\", \n .     sep = \"\"))",
+      "2. read.table(file = file, header = header, sep = sep, quote = quote, \n .     dec = dec, fill = fill, comment.char = comment.char, ...)",
+      "3. file(file, \"rt\")"
+     ]
+    }
+   ],
    "source": [
     "# #################################################\n",
     "# (1) zimmerman coho mortality data\n",
@@ -603,21 +620,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
