--- a/notebooks/Data Prep - Salmon hatchery versus wild escapement - PSC 2022.ipynb
+++ b/notebooks/Data Prep - Salmon hatchery versus wild escapement - PSC 2022.ipynb
@@ -292,7 +292,7 @@
    "execution_count": 25,
    "id": "05bc01ee",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -413,7 +413,9 @@
    "cell_type": "code",
    "execution_count": 40,
    "id": "ea69b345",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1048,7 +1050,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
