new figs, revision to scripts

--- a/scripts/Data Prep - Salmon hatchery Puget - RMIS .ipynb
+++ b/scripts/Data Prep - Salmon hatchery Puget - RMIS .ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "108807e5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Visuals and stats for hatchery v wild escapements\n",
     "By: G Oldford\n",
@@ -31,7 +35,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "4d245ccd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -58,7 +66,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "3442446a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "f_hood = \"HoodCan_CSV19806.txt\"\n",
@@ -111,7 +123,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b674e40b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -119,7 +135,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "add0b4cf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -199,7 +219,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "08e06444",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -279,7 +303,11 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "fc201dae",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -317,7 +345,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "888d8b0e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
