--- a/scripts/notebook archive/Data Prep - Salmon hatchery releases - 2 vis (py 3).ipynb
+++ b/scripts/notebook archive/Data Prep - Salmon hatchery releases - 2 vis (py 3).ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# purpose: visuals for publication of hatchery releases over time."
@@ -12,7 +16,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# must open Jupyter as 'administrator' to install plotly, vega\n",
@@ -27,19 +35,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "RendererRegistry.enable('notebook')"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "_TypedDictMeta.__new__() got an unexpected keyword argument 'closed'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[2], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mplotly_express\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mpx\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mpandas\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mpd\u001B[39;00m\n\u001B[1;32m----> 3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01maltair\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01malt\u001B[39;00m\n\u001B[0;32m      4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mvega\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mv\u001B[39;00m\n\u001B[0;32m      6\u001B[0m \u001B[38;5;66;03m#alt.renderers.enable('jupyterlab')\u001B[39;00m\n",
+      "File \u001B[1;32mC:\\Program Files\\Python313\\Lib\\site-packages\\altair\\__init__.py:650\u001B[0m\n\u001B[0;32m    646\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__dir__\u001B[39m():\n\u001B[0;32m    647\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m __all__\n\u001B[1;32m--> 650\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01maltair\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mvegalite\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;241m*\u001B[39m\n\u001B[0;32m    651\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01maltair\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mvegalite\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mv5\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mschema\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcore\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Dict\n\u001B[0;32m    652\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01maltair\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mjupyter\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m JupyterChart\n",
+      "File \u001B[1;32mC:\\Program Files\\Python313\\Lib\\site-packages\\altair\\vegalite\\__init__.py:2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# ruff: noqa: F403\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mv5\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;241m*\u001B[39m\n",
+      "File \u001B[1;32mC:\\Program Files\\Python313\\Lib\\site-packages\\altair\\vegalite\\v5\\__init__.py:4\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# ruff: noqa: F401, F403\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01maltair\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mexpr\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcore\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m datum\n\u001B[1;32m----> 4\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mapi\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;241m*\u001B[39m\n\u001B[0;32m      5\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcompiler\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m vegalite_compilers\n\u001B[0;32m      6\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mdata\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m (\n\u001B[0;32m      7\u001B[0m     MaxRowsError,\n\u001B[0;32m      8\u001B[0m     data_transformers,\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m     14\u001B[0m     to_values,\n\u001B[0;32m     15\u001B[0m )\n",
+      "File \u001B[1;32mC:\\Program Files\\Python313\\Lib\\site-packages\\altair\\vegalite\\v5\\api.py:618\u001B[0m\n\u001B[0;32m    614\u001B[0m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mTypeError\u001B[39;00m(if_false)\n\u001B[0;32m    615\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m selection\n\u001B[1;32m--> 618\u001B[0m \u001B[38;5;28;43;01mclass\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[38;5;21;43;01m_ConditionClosed\u001B[39;49;00m\u001B[43m(\u001B[49m\u001B[43mTypedDict\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mclosed\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtotal\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m)\u001B[49m\u001B[43m:\u001B[49m\u001B[43m  \u001B[49m\u001B[38;5;66;43;03m# type: ignore[call-arg]\u001B[39;49;00m\n\u001B[0;32m    619\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;66;43;03m# https://peps.python.org/pep-0728/\u001B[39;49;00m\n\u001B[0;32m    620\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;66;43;03m# Parameter {\"param\", \"value\", \"empty\"}\u001B[39;49;00m\n\u001B[0;32m    621\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;66;43;03m# Predicate {\"test\", \"value\"}\u001B[39;49;00m\n\u001B[0;32m    622\u001B[0m \u001B[43m    \u001B[49m\u001B[43mempty\u001B[49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43mOptional\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;28;43mbool\u001B[39;49m\u001B[43m]\u001B[49m\n\u001B[0;32m    623\u001B[0m \u001B[43m    \u001B[49m\u001B[43mparam\u001B[49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43mParameter\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m|\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;28;43mstr\u001B[39;49m\n",
+      "\u001B[1;31mTypeError\u001B[0m: _TypedDictMeta.__new__() got an unexpected keyword argument 'closed'"
+     ]
     }
    ],
    "source": [
@@ -54,46 +81,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Greig\\.conda\\envs\\R-Notebooks\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3186: DtypeWarning:\n",
-      "\n",
-      "Columns (13,14,24,29,37,38,44,46,62,66,73) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "\n"
+      "C:\\Users\\Greig\\AppData\\Local\\Temp\\ipykernel_27624\\1966643455.py:2: DtypeWarning: Columns (13,14,24,29,37,38,44,46,62,66,73) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  releases = pd.read_csv(localpath_epad + \"/MODIFIED/actual_releases_COORDS.csv\",parse_dates=['RELEASE_YEAR'])\n"
      ]
     },
     {
      "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0', 'AVE_WEIGHT', 'BIOMASS_MT', 'BROOD_YEAR',\n",
-       "       'COORD_SourceRound', 'END_DATE', 'END_DAY_REL', 'END_MO_REL',\n",
-       "       'END_YR_REL', 'FACILITY_NAME', 'FID', 'FINAL_LAT', 'FINAL_LON',\n",
-       "       'FeatureType', 'GAZETTED_NAME', 'LATITUDE_PSF', 'LAT_GLO', 'LAT_GLO_x',\n",
-       "       'LAT_GLO_y', 'LONGITUDE_PSF', 'LON_GLO', 'LON_GLO_x', 'LON_GLO_y',\n",
-       "       'MRP_TAGCODE', 'NEW_WATERSHED_CODE', 'NONZERO_MEAN_WEIGHT', 'NoTagClip',\n",
-       "       'NoTagNum', 'NoTagPartMarkNum', 'Note', 'PROGRAM_CODE', 'PROJ_NAME',\n",
-       "       'PURPOSE_CODE', 'REARING_TYPE_CODE', 'RELEASE_COMMENT',\n",
-       "       'RELEASE_SITE_NAME', 'RELEASE_SITE_NAME_G', 'RELEASE_SITE_NAME_x',\n",
-       "       'RELEASE_SITE_NAME_y', 'RELEASE_STAGE_NAME', 'RELEASE_YEAR',\n",
-       "       'REL_CU_INDEX', 'REL_CU_NAME', 'RUN_NAME', 'Release_Site', 'RowNum',\n",
-       "       'SOURCE', 'SPECIES_NAME', 'START_DATE', 'START_DAY_REL', 'START_MO_REL',\n",
-       "       'START_YR_REL', 'STOCK_CU_INDEX', 'STOCK_CU_NAME', 'STOCK_NAME',\n",
-       "       'STOCK_PROD_AREA_CODE', 'STOCK_TYPE_CODE', 'ShedTagNum', 'TaggedClip',\n",
-       "       'TaggedNum', 'TotalRelease', 'UnmarkedNum', 'WATERBODY_IDENTIFIER',\n",
-       "       'WATERBODY_POLY_ID', 'WATERBODY_STREAM_LINE_ID', 'WBODY_ID',\n",
-       "       'Watershed_Code_PSF', 'accuracy', 'basin', 'description', 'lctype',\n",
-       "       'location_code', 'location_key', 'location_key2', 'name', 'notes',\n",
-       "       'objectid', 'region', 'rmis_latitude', 'rmis_longitude', 'rpagency',\n",
-       "       'source', 'submission'],\n",
-       "      dtype='object')"
-      ]
+      "text/plain": "Index(['Unnamed: 0', 'AVE_WEIGHT', 'BIOMASS_MT', 'BROOD_YEAR',\n       'COORD_SourceRound', 'END_DATE', 'END_DAY_REL', 'END_MO_REL',\n       'END_YR_REL', 'FACILITY_NAME', 'FID', 'FINAL_LAT', 'FINAL_LON',\n       'FeatureType', 'GAZETTED_NAME', 'LATITUDE_PSF', 'LAT_GLO', 'LAT_GLO_x',\n       'LAT_GLO_y', 'LONGITUDE_PSF', 'LON_GLO', 'LON_GLO_x', 'LON_GLO_y',\n       'MRP_TAGCODE', 'NEW_WATERSHED_CODE', 'NONZERO_MEAN_WEIGHT', 'NoTagClip',\n       'NoTagNum', 'NoTagPartMarkNum', 'Note', 'PROGRAM_CODE', 'PROJ_NAME',\n       'PURPOSE_CODE', 'REARING_TYPE_CODE', 'RELEASE_COMMENT',\n       'RELEASE_SITE_NAME', 'RELEASE_SITE_NAME_G', 'RELEASE_SITE_NAME_x',\n       'RELEASE_SITE_NAME_y', 'RELEASE_STAGE_NAME', 'RELEASE_YEAR',\n       'REL_CU_INDEX', 'REL_CU_NAME', 'RUN_NAME', 'Release_Site', 'RowNum',\n       'SOURCE', 'SPECIES_NAME', 'START_DATE', 'START_DAY_REL', 'START_MO_REL',\n       'START_YR_REL', 'STOCK_CU_INDEX', 'STOCK_CU_NAME', 'STOCK_NAME',\n       'STOCK_PROD_AREA_CODE', 'STOCK_TYPE_CODE', 'ShedTagNum', 'TaggedClip',\n       'TaggedNum', 'TotalRelease', 'UnmarkedNum', 'WATERBODY_IDENTIFIER',\n       'WATERBODY_POLY_ID', 'WATERBODY_STREAM_LINE_ID', 'WBODY_ID',\n       'Watershed_Code_PSF', 'accuracy', 'basin', 'description', 'lctype',\n       'location_code', 'location_key', 'location_key2', 'name', 'notes',\n       'objectid', 'region', 'rmis_latitude', 'rmis_longitude', 'rpagency',\n       'source', 'submission'],\n      dtype='object')"
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,8 +113,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "releases.loc[releases['STOCK_PROD_AREA_CODE'] == 'TOMM', 'Area'] = 'Thompson & Shuswap R.'\n",
@@ -121,7 +132,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Altair (with Vega) Libraries \n",
     "https://altair-viz.github.io/gallery/interactive_legend.html\n",
@@ -130,18 +145,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "RendererRegistry.enable('notebook')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'alt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[5], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# notebook render\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m \u001B[43malt\u001B[49m\u001B[38;5;241m.\u001B[39mrenderers\u001B[38;5;241m.\u001B[39menable(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mnotebook\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'alt' is not defined"
+     ]
     }
    ],
    "source": [
@@ -152,7 +172,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -181,7 +205,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# for use elsewhere (ArcGIS Online Dashboard?)\n",
@@ -196,7 +224,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# note - altair encoding data types\n",
@@ -211,7 +243,10 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -290,7 +325,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -368,14 +407,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -454,14 +501,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# release stage name chinook agg - have stream type proportion changed? \n",
@@ -471,7 +526,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -549,7 +608,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -627,14 +690,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# experiments with interactive chart"
@@ -643,17 +714,21 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "ename": "NameError",
      "evalue": "name 'surv' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_17604/298368129.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;31m#selection2 = alt.selection_single(fields=['JuvenileTy'], bind=input_dropdown2, name='Juvenile Strat ')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m base = alt.Chart(surv).mark_line().encode(\n\u001b[0m\u001b[0;32m     19\u001b[0m     \u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0malt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'year(year)'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtitle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'year'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m     y=alt.Y('survival:Q',\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'surv' is not defined"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_17604/298368129.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     16\u001B[0m \u001B[1;31m#selection2 = alt.selection_single(fields=['JuvenileTy'], bind=input_dropdown2, name='Juvenile Strat ')\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     17\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 18\u001B[1;33m base = alt.Chart(surv).mark_line().encode(\n\u001B[0m\u001B[0;32m     19\u001B[0m     \u001B[0mx\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0malt\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mX\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'year(year)'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mtitle\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;34m'year'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     20\u001B[0m     y=alt.Y('survival:Q',\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'surv' is not defined"
      ]
     }
    ],
@@ -689,21 +764,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
